<resources>
    <string name="app_name">Agenda Prospera</string>
    <string name="login_usuario">Usuário</string>
    <string name="login_senha">Senha</string>
    <string name="login_matenha_conectado">Mantenha-me conectado</string>
    <string name="label_login">Login</string>
    <string name="login_recuperar_senha">Recuperar senha</string>
    <string name="login_criar_perfil">Criar perfil</string>
    <string name="button_login">Entrar</string>
    <string name="campo_nome">Nome</string>
    <string name="campo_login">Login</string>
    <string name="campo_senha">Senha</string>
    <string name="btn_salvar">Salvar</string>
    <string name="principal_perfil">Perfil</string>
    <string name="principal_cadastrar_cliente">Cadastrar</string>
    <string name="principal_cliente">Cliente</string>
    <string name="principal_listar">Listar</string>
    <string name="principal_quilometragem">Viagens</string>
    <string name="agenda_listar_toolbar">Listar Agenda</string>
    <string name="cliente_listar_toolbar">Listar Cliente</string>
    <string name="cliente_cadastrar_toolbar">Cadastrar Cliente</string>
    <string name="perfil_agente_toolbar">Perfil</string>
    <string name="agente_cadastrar_toolbar">Cadastrar Agente</string>

</resources>
