<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@color/colorBackground"
        android:layout_height="match_parent"
        tools:context=".ui.agente.login.AgenteLogin">
    <LinearLayout android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
                android:layout_marginTop="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/padding_layout_padrao"
                app:cardElevation="5dp"
                app:cardCornerRadius="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/padding_layout_padrao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/label_login"
                        android:gravity="center"
                        android:padding="@dimen/padding_layout_padrao"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                <com.google.android.material.textfield.TextInputLayout
                        android:hint="@string/login_usuario"
                        android:padding="@dimen/padding_layout_padrao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_login_usuario"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                        android:hint="@string/login_senha"
                        android:padding="@dimen/padding_layout_padrao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_login_senha"
                            android:inputType="textPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout android:layout_width="match_parent"
                              android:padding="@dimen/padding_layout_padrao"
                              android:layout_height="wrap_content">
                    <CheckBox
                            android:id="@+id/checkbox_matenha_conectado"
                            android:layout_width="wrap_content"
                            android:text="@string/login_matenha_conectado"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
                android:id="@+id/btn_login_entrar"
                android:text="@string/button_login"
                android:textColor="@android:color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorPrimary"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <LinearLayout android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:layout_marginTop="50dp"
                      android:padding="@dimen/padding_layout_padrao"
                      android:layout_height="wrap_content">

            <TextView android:layout_width="match_parent"
                      android:id="@+id/txt_recuperar_perfil"
                      android:text="@string/login_recuperar_senha"
                      android:gravity="center_horizontal"
                      android:padding="@dimen/padding_layout_padrao"
                      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                      android:clickable="true"
                      android:focusable="true"
                      android:foreground="?android:attr/selectableItemBackground"
                      android:layout_height="wrap_content"/>
            <TextView android:layout_width="match_parent"
                      android:id="@+id/txt_criar_perfil"
                      android:clickable="true"
                      android:focusable="true"
                      android:foreground="?android:attr/selectableItemBackground"
                      android:gravity="center_horizontal"
                      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                      android:text="@string/login_criar_perfil"
                      android:padding="@dimen/padding_layout_padrao"
                      android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>