<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/colorBackground"
        android:layout_height="match_parent"
        tools:context=".ui.principal.Principal">

    <TableLayout android:layout_width="match_parent"
                 android:layout_marginTop="50dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_height="wrap_content">

        <TableRow android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:gravity="center_horizontal|clip_horizontal"
                  android:layout_gravity="center_vertical|center_horizontal"
                  android:padding="@dimen/padding_layout_padrao"
                  android:layout_margin="@dimen/padding_layout_padrao"
                  android:layout_width="wrap_content">

            <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_margin="@dimen/padding_layout_padrao"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:onClick="selecionarOpcao"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="15dp"
                    android:id="@+id/card_perfil">

                <LinearLayout android:layout_width="wrap_content"
                              android:orientation="vertical"
                              android:layout_margin="@dimen/padding_layout_padrao"
                              android:layout_height="wrap_content">
                    <ImageView android:layout_width="wrap_content"
                               android:src="@mipmap/ic_pessoa"
                               android:padding="@dimen/padding_layout_padrao"
                               android:layout_gravity="center"
                               android:layout_height="wrap_content"/>
                    <TextView android:layout_width="wrap_content"
                              android:padding="@dimen/padding_layout_padrao"
                              android:text="@string/principal_perfil"
                              android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                              android:textStyle="bold"
                              android:layout_height="wrap_content"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:onClick="selecionarOpcao"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="15dp"
                    android:id="@+id/card_add_cliente">

                <LinearLayout android:layout_width="wrap_content"
                              android:orientation="vertical"
                              android:layout_margin="@dimen/padding_layout_padrao"
                              android:layout_height="wrap_content">
                    <ImageView android:layout_width="wrap_content"
                               android:src="@mipmap/ic_adicionar"
                               android:padding="@dimen/padding_layout_padrao"
                               android:layout_gravity="center"
                               android:layout_height="wrap_content"/>
                    <TextView android:layout_width="wrap_content"
                              android:text="@string/principal_cadastrar_cliente"
                              android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                              android:layout_gravity="center"
                              android:textStyle="bold"
                              android:layout_height="wrap_content"/>
                    <TextView android:layout_width="wrap_content"
                              android:layout_gravity="center"
                              android:text="@string/principal_cliente"
                              android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                              android:textStyle="bold"
                              android:layout_height="wrap_content"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </TableRow>
        <TableRow android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:gravity="center_horizontal|clip_horizontal"
                  android:layout_gravity="center_vertical|center_horizontal"
                  android:padding="@dimen/padding_layout_padrao"
                  android:layout_margin="@dimen/padding_layout_padrao"
                  android:layout_width="wrap_content">

            <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_margin="@dimen/padding_layout_padrao"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:onClick="selecionarOpcao"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="15dp"
                    android:id="@+id/card_listar_cliente">

                <LinearLayout android:layout_width="wrap_content"
                              android:orientation="vertical"
                              android:layout_margin="@dimen/padding_layout_padrao"
                              android:layout_height="wrap_content">
                    <ImageView android:layout_width="wrap_content"
                               android:src="@mipmap/ic_listar"
                               android:padding="@dimen/padding_layout_padrao"
                               android:layout_gravity="center"
                               android:layout_height="wrap_content"/>
                    <TextView android:layout_width="wrap_content"
                              android:text="@string/principal_listar"
                              android:layout_gravity="center"
                              android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                              android:textStyle="bold"
                              android:layout_height="wrap_content"/>
                    <TextView android:layout_width="wrap_content"
                              android:text="@string/principal_cliente"
                              android:layout_gravity="center"
                              android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                              android:textStyle="bold"
                              android:layout_height="wrap_content"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:onClick="selecionarOpcao"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="15dp"
                    android:id="@+id/card_quilometragem">

                <LinearLayout android:layout_width="wrap_content"
                              android:orientation="vertical"
                              android:layout_margin="@dimen/padding_layout_padrao"
                              android:layout_height="wrap_content">
                    <ImageView android:layout_width="wrap_content"
                               android:src="@mipmap/ic_agenda"
                               android:padding="@dimen/padding_layout_padrao"
                               android:layout_gravity="center"
                               android:layout_height="wrap_content"/>
                    <TextView android:layout_width="wrap_content"
                              android:text="@string/principal_listar"
                              android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                              android:layout_gravity="center"
                              android:textStyle="bold"
                              android:layout_height="wrap_content"/>
                    <TextView android:layout_width="wrap_content"
                              android:layout_gravity="center"
                              android:text="@string/principal_quilometragem"
                              android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                              android:textStyle="bold"
                              android:layout_height="wrap_content"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </TableRow>
    </TableLayout>
</ScrollView>